; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/ecma/operations/extr_ecma-exceptions.c_ecma_new_standard_error_with_message.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/ecma/operations/extr_ecma-exceptions.c_ecma_new_standard_error_with_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@LIT_MAGIC_STRING_MESSAGE = common dso_local global i32 0, align 4
@ECMA_PROPERTY_CONFIGURABLE_WRITABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ecma_new_standard_error_with_message(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32* @ecma_new_standard_error(i32 %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @LIT_MAGIC_STRING_MESSAGE, align 4
  %11 = call i32 @ecma_get_magic_string(i32 %10)
  %12 = load i32, i32* @ECMA_PROPERTY_CONFIGURABLE_WRITABLE, align 4
  %13 = call %struct.TYPE_3__* @ecma_create_named_data_property(i32* %9, i32 %11, i32 %12, i32* null)
  store %struct.TYPE_3__* %13, %struct.TYPE_3__** %6, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @ecma_ref_ecma_string(i32* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @ecma_make_string_value(i32* %16)
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32*, i32** %5, align 8
  ret i32* %20
}

declare dso_local i32* @ecma_new_standard_error(i32) #1

declare dso_local %struct.TYPE_3__* @ecma_create_named_data_property(i32*, i32, i32, i32*) #1

declare dso_local i32 @ecma_get_magic_string(i32) #1

declare dso_local i32 @ecma_ref_ecma_string(i32*) #1

declare dso_local i32 @ecma_make_string_value(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
